// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number component should have default value for native platform 1`] = `
[
  <View
    onLayout={[Function]}
    style={
      {
        "height": 0,
        "width": 0,
      }
    }
  />,
  <TextInput
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessibilityValue={
      {
        "max": null,
        "min": null,
      }
    }
    accessible={true}
    activeFloatingLabelStyle={{}}
    allowContentSelection={true}
    autoFocus={null}
    background={
      <React.Fragment>
        <BackgroundComponent
          style={
            {
              "borderRadius": 6,
            }
          }
        />
      </React.Fragment>
    }
    caretHidden={false}
    contextMenuHidden={false}
    defaultValue="sample text"
    editable={true}
    floatingLabelStyle={{}}
    isInputFocused={false}
    keyboardType="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    onSelectionChange={[Function]}
    placeholder="Enter amount"
    placeholderTextColor="#bbbbbb"
    selection={null}
    style={
      [
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#dddddd",
            "borderRadius": 6,
            "borderStyle": "solid",
            "borderWidth": 1,
            "minHeight": 42,
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 8,
          },
          {},
          {},
        ],
        {},
      ]
    }
    testID="wm-text-input_i"
  />,
]
`;

exports[`Number component should have default value for web platform 1`] = `
[
  <View
    onLayout={[Function]}
    style={
      {
        "height": 0,
        "width": 0,
      }
    }
  />,
  <TextInput
    accessibilityLabel="wm-text-input_i"
    activeFloatingLabelStyle={{}}
    allowContentSelection={true}
    autoFocus={null}
    background={
      <React.Fragment>
        <BackgroundComponent
          style={
            {
              "borderRadius": 6,
            }
          }
        />
      </React.Fragment>
    }
    caretHidden={false}
    contextMenuHidden={false}
    editable={true}
    floatingLabelStyle={{}}
    isInputFocused={false}
    keyboardType="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    onSelectionChange={[Function]}
    placeholder="Enter amount"
    placeholderTextColor="#bbbbbb"
    selection={null}
    style={
      [
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#dddddd",
            "borderRadius": 6,
            "borderStyle": "solid",
            "borderWidth": 1,
            "minHeight": 42,
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 8,
          },
          {},
          {},
        ],
        {},
      ]
    }
    testID="wm-text-input_i"
    value="sample text"
  />,
]
`;

exports[`Number component should render correctly with default props 1`] = `
[
  <View
    onLayout={[Function]}
    style={
      {
        "height": 0,
        "width": 0,
      }
    }
  />,
  <View
    collapsable={false}
    pointerEvents="none"
    style={
      {
        "color": "#bbbbbb",
        "fontSize": 14,
        "left": 16,
        "position": "absolute",
        "top": 12,
        "transform": [
          {
            "translateY": 0,
          },
          {
            "translateX": 0,
          },
          {
            "scale": 1,
          },
        ],
        "width": 160,
        "zIndex": 1,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      style={
        {
          "color": "#bbbbbb",
          "fontFamily": undefined,
          "fontSize": 14,
          "fontStyle": undefined,
          "fontVariant": undefined,
          "fontWeight": undefined,
          "includeFontPadding": undefined,
          "letterSpacing": undefined,
          "lineHeight": undefined,
          "textAlign": undefined,
          "textAlignVertical": undefined,
          "textDecorationColor": undefined,
          "textDecorationStyle": undefined,
          "textShadowColor": undefined,
          "textShadowOffset": undefined,
          "textShadowRadius": undefined,
          "textTransform": undefined,
          "userSelect": undefined,
          "verticalAlign": undefined,
          "writingDirection": undefined,
        }
      }
    >
      Amount
    </Text>
  </View>,
  <TextInput
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessibilityValue={
      {
        "max": null,
        "min": null,
      }
    }
    accessible={true}
    activeFloatingLabelStyle={
      {
        "color": "#4263eb",
      }
    }
    allowContentSelection={true}
    autoFocus={null}
    background={
      <React.Fragment>
        <BackgroundComponent
          style={
            {
              "borderRadius": 6,
            }
          }
        />
      </React.Fragment>
    }
    caretHidden={false}
    contextMenuHidden={false}
    defaultValue=""
    editable={true}
    floatingLabel="Amount"
    floatingLabelStyle={
      {
        "color": "#bbbbbb",
        "fontSize": 14,
        "left": 16,
        "position": "absolute",
        "top": 12,
      }
    }
    isInputFocused={false}
    keyboardType="numeric"
    onBlur={[Function]}
    onChange={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    onSelectionChange={[Function]}
    placeholder=""
    placeholderTextColor="#bbbbbb"
    selection={null}
    style={
      [
        [
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#dddddd",
            "borderRadius": 6,
            "borderStyle": "solid",
            "borderWidth": 1,
            "minHeight": 48,
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 8,
          },
          {},
          {},
        ],
        {},
      ]
    }
    testID="wm-text-input_i"
  />,
]
`;
